--- a/index.html
+++ b/index.html
@@ -30,23 +30,58 @@
             </div>
         </div>
     </div>
-</div>
+</div> 
+
+
+    <div class="title">
+            <h3>Some random information</h3>
+    </div>
 
 <div class="midSection">
-    <div class="title">
-        <h3>Some random information</h3>
+    <div class="container">
+        <div class="boxes">
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
-    <div class="boxes">
-
-
-
-    </div>
-
-
-
 </div>
 
+<div class="quoteSection">
+    <div class="container">
+        <h4>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it? Who knows? All I know is that it looks nice.</h4>
+        <a>- Thor, God of Thunder</a>
+    </div>
+</div>
 
+<div class="ctaSection">
+    <div class="container">
+        <div class="ctaContent">
+            <h4>Call to action! It's time!</h4>
+            <a>Sign up for our product by clicking that button right over there!</a>
+        </div>
+        <div class="ctaButton">
+            <button>Sign up</button>
+        </div>
+    </div>
+</div>
+
+<footer class="footer">
+    <h2>Copyright, The Odin Project 2021</h2>
+</footer>
 
 </body>
 </html>
